2014-02-20 Support for dragging in multiple gap
2014-02-19 Fixed problem withpage move notification
2014-02-18 Fixed problem with scoring method when module LineNumber was not activity
2014-02-18 PlayerUtils extended to return score for individual pages
2014-02-18 Fixed problem with empty text on chrome browser
2014-02-17 Fixed problem with localized property names
2014-02-17 Added new property for additional classes in popup
2014-02-13 Added API interface to get table of contents
2014-02-13 Fixed problem with exception thrown to JavaScript console at presentation start
2014-02-13 Fixed problem with blocking popup button after check+reset combination
2014-02-13 Don't allow opening the popup twice
2014-02-11 Different handling for d&d on mobile devices and PC
2014-02-10 Fixed problem with d&d
2014-02-06 Fixed problem with page progress on not reportable page
2014-02-05 Added drag and drop support to image source and image gap
2014-02-05 Added drag and drop support to source list and text modules
2014-02-05 Added custom css support for plots in Plot module
2014-02-04 Fixed state restoring after clicking Reset button in Memo Game module
2014-01-27 Added new command to Puzzle module: getLoadedPromise
2014-01-23 Add Navigation Panel feature.
2014-01-23 Changed type of property Description (from text to html) in Glossary module
2014-01-23 Fixed problem with positioning LaTeX in Text Identification module in book view mode
2014-01-22 Fixed problem with MathJax rendering in Video module
2014-01-16 Fixed problem with drag & drop in Graph module
2014-01-16 Glossary definition click events are not propagated any more to stop navigation buttons display.
2014-01-15 Fixed problem with zero one score.
2014-01-14 Added new score type. result - errors.
2014-01-13 Fixed bug in Text Identification, when clicking on the module was showing navigation arrows
2014-01-13 Added new score type Zero-One
2014-01-13 Allow putting glossary module in header and footer.