@@ -1,3 +1,4 @@
+2014-02-21 PlayerUtils return mistake count also
 2014-02-20 Support for dragging in multiple gap
 2014-02-19 Fixed problem withpage move notification
 2014-02-18 Fixed problem with scoring method when module LineNumber was not activity
